tests/errors/fixed_form_2.f
      program X
      integer :: y
      y = 5x
500   print *, y
      end program
